--- a/html/agenda-ch.html
+++ b/html/agenda-ch.html
@@ -218,7 +218,7 @@
         To Build the Bridge Between Us
       </div>
       <div class="page-caption black-shadow">
-         2018 <br/> AGENDA
+         2018 <br/> 峰会日程
       </div>
       <div class="bottom-square">
         <div class="row">
@@ -237,19 +237,19 @@
     <div class="section-free">
       <div class="row">
         <div class="col-12 col-md-4 center-txt">
-          <h2 class="agenda-date">April 13th</h2>
+          <h2 class="agenda-date">四月十三日</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
               4:00PM - 6:00PM
             </div>
             <div class="item-title">
-              Media Conference
+              媒体发布会
             </div>
             <div class="item-location">
               Hilton Inn At Penn
             </div>
             <div class="item-desc">
-              Hosted by PWCS and Representatives from the Wharton School. An opportunity for media to ask questions.
+              由PWCS与沃顿商学院代表共同举办面向媒体朋友的新闻发布会
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -257,13 +257,13 @@
               5:30PM - 8:00PM
             </div>
             <div class="item-title">
-              Career Fair
+              招聘会
             </div>
             <div class="item-location">
               Hilton Inn at Penn
             </div>
             <div class="item-desc">
-              Company Representatives to set up booths. Open to registered audience.
+              各大公司代表设置展台，与广大有需要的求职者交流。
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -271,13 +271,13 @@
               6:00PM - 7:30PM
             </div>
             <div class="item-title">
-              Career Advising Panel
+              职业发展论坛
             </div>
             <div class="item-location">
               Hilton Inn at Penn
             </div>
             <div class="item-desc">
-              Hosted by PWCS, Liepin.com, and representative from China Telecom North America Branch.
+              由PWCS、猎聘网和中国电信北美分公司共同举办的职业发展论坛
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -285,30 +285,30 @@
               6:30PM - 9:00PM
             </div>
             <div class="item-title">
-              VIP Banquet
+              VIP 晚宴
             </div>
             <div class="item-location">
               Huntsman Hall
             </div>
             <div class="item-desc">
-              A Dinner Hosted by PWCS and the Wharton School to thank our distinguished guests and partners
+              沃顿商学院举办晚宴， 以感谢远道而来的嘉宾与PWCS合作伙伴
             </div>
           </div>
         </div>
         <div class="col-12 col-md-4 center-txt">
-          <h2 class="agenda-date">April 14th</h2>
+          <h2 class="agenda-date">四月十四日</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
               8:00AM - 10:00AM
             </div>
             <div class="item-title">
-              General Registration
+              观众注册
             </div>
             <div class="item-location">
               Houston Hall Bodek Lounge
             </div>
             <div class="item-desc">
-              Audience to register and pick up summit brochure, name tags, and souvenir.
+              观众到场注册，领取峰会手册、峰会名牌、和峰会纪念品
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -316,13 +316,14 @@
               9:00AM - 11:30AM
             </div>
             <div class="item-title">
-              Openning Ceremony
+              开幕式
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -330,22 +331,26 @@
               12:30PM - 2:30PM
             </div>
             <div class="item-title">
-              PANEL 1: Real Estate
+              分论坛 1: 房地产板块
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              在这个充满机遇的时间节点，企业该如何实现从传统模式到新模式的平稳过渡？<br/>
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
             <div class="item-title">
-              PANEL 2: New Technology
+              分论坛 2: 科技板块
             </div>
             <div class="item-location">
               Annenburg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              以创新科技为核心的新产业将对传统行业造成怎样的冲击？<br/>
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -353,22 +358,26 @@
               3:00PM - 5:00PM
             </div>
             <div class="item-title">
-              PANEL 3: Entertainment
+              分论坛 3: 时尚娱乐板块
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              近年的行业大转型为娱乐以及时尚产业带来了怎样的影响？<br/>
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
             <div class="item-title">
-              PANEL 4: International Relations
+              分论坛 4: 国际关系板块
             </div>
             <div class="item-location">
               Annenburg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              留学生应如何理解习主席和特朗普总统达成的共识以及“一代一路”的意义？<br/>
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -376,13 +385,13 @@
               7:00PM - 9:00PM
             </div>
             <div class="item-title">
-              INNOTALK Entreprenuership Panel
+              INNOTALK 创业创新论坛
             </div>
             <div class="item-location">
               Annenberg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              顶尖的创业团队们与经验丰富的评委和知识渊博的教授能碰撞出怎样的火花？如果你对创业有兴趣，这个机会不容错过！
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -390,39 +399,43 @@
               9:00PM - 11:00PM
             </div>
             <div class="item-title">
-              Social Event
+              社交晚会
             </div>
             <div class="item-location">
               Marriott Downtown
             </div>
             <div class="item-desc">
-              (Content Updating)
+              在结束了一天紧凑的议程后，欢迎大家参与晚上的社交晚会。<br/>
             </div>
           </div>
         </div>
         <div class="col-12 col-md-4 center-txt">
-          <h2 class="agenda-date">April 15th</h2>
+          <h2 class="agenda-date">四月十五日</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
               10:00AM - 12:00PM
             </div>
             <div class="item-title">
-              PANEL 3: Entertainment
+              分论坛 5: 财经商业板块
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              投资者们该如何驾驭中国市场持续的监管变化、科技产业动荡等多重因素？<br/>
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
             <div class="item-title">
-              PANEL 4: International Relations
+              分论坛 6: 社会责任板块
             </div>
             <div class="item-location">
               Annenburg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              企业家们如何看待企业可持续发展与社会责任，并对未来有怎样的展望？<br/>
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -430,13 +443,14 @@
               1:30PM - 3:30PM
             </div>
             <div class="item-title">
-              Closing Ceremony
+              闭幕式
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              <span style="font-family: avn-demi">嘉宾</span><br/>
+              (将于近期揭晓)
             </div>
           </div>
         </div>
