--- a/html/agenda.html
+++ b/html/agenda.html
@@ -322,7 +322,8 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -336,7 +337,9 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              In this pivotal moment of transformation, how should the traditional real estate industry adjust smoothly into this new era, and how should companies adapt based on their unique characteristics instead of blindly following the trend?<br/>
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
             <div class="item-title">
               PANEL 2: New Technology
@@ -345,7 +348,9 @@
               Annenburg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              How will new forces shape the trajectories of technology development in China and in the world? As college students, how should we leverage surrounding opportunities to make a dent in the universe?<br/>
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -359,7 +364,9 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              What would already-established figures say about current Chinese fashion and entertainment, and what are their opinions on the impact that an increasing influx of capital has on the industry? <br/>
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
             <div class="item-title">
               PANEL 4: International Relations
@@ -368,7 +375,9 @@
               Annenburg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              In today's world, how should students make sense of the consensus between the two presidents of China and the U.S. as well as the significance of the Belt and Road initiative?<br/>
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -382,7 +391,7 @@
               Annenberg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              A thought-provoking conversation between startup teams, guests, and professors. Innotalk is a wonderful opportunity for anyone interested in learning about the exciting world of startups.<br/>
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -396,7 +405,7 @@
               Marriott Downtown
             </div>
             <div class="item-desc">
-              (Content Updating)
+              After a day's of fruitful agenda, chill out with us at our social event. Talk, dance and drink with your peers.<br/>
             </div>
           </div>
         </div>
@@ -407,22 +416,26 @@
               10:00AM - 12:00PM
             </div>
             <div class="item-title">
-              PANEL 3: Entertainment
+              PANEL 5: Finance
             </div>
             <div class="item-location">
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can global investors better navigate the volatile but evolving Chinese market and economy?<br/>
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
             <div class="item-title">
-              PANEL 4: International Relations
+              PANEL 6: Social Responsibility
             </div>
             <div class="item-location">
               Annenburg Center
             </div>
             <div class="item-desc">
-              (Content Updating)
+              What are the thoughts of outstanding entrepreneurs on the status, problems, solutions, and future prospects of sustainable development and social responsibility of Chinese enterprises?<br/>
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -436,7 +449,8 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              (Content Updating)
+              <span style="font-family: avn-demi">Speakers:</span><br/>
+              (To Be Announced)
             </div>
           </div>
         </div>
